# pefe-common

./: .gitignore  LICENSE.txt  README.md  setup.cfg
pefe_common/: petools.py
pefe_common/config/: Config.py
pefe_common/messaging/: README.md  __main__.py
pefe_common/messaging/framed/: __init__.py  client.py  server.py  socket.py
pefe_common/messaging/json/: __init__.py  client.py  server.py  socket.py
