[metadata]
name = pefe_common
version = attr: pefe_common.__version__
author = Vu Tung Lam
author_email = vutunglaminfo@gmail.com
description = Common code for pefe-system modules, nodes and programs alike
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pefe-system/pefe-common
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
package_dir = 
    = .
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = .
